--- a/src/components/Landing/Contact/Contact.css
+++ b/src/components/Landing/Contact/Contact.css
@@ -141,7 +141,7 @@
   transition: all 0.3s;
 }
 .prt_contact_details_box p a:hover {
-  color: #f6483b;
+  color: #2a7ae3;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -ms-transition: all 0.3s;
