--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -2,7 +2,7 @@
   background-color: #010101;
   position: absolute;
   animation-duration: 1s;
-  animation-name: slidein;
+  animation-name: slideRight;
   width: 100%;
   display: block;
   top: 0;
@@ -116,7 +116,7 @@
   color: #000000;
 }
 
-@keyframes slidein {
+@keyframes slideRight {
   from {
     right: 100%;
   }
