--- a/apps/personal-portfolio/pages/styles.scss
+++ b/apps/personal-portfolio/pages/styles.scss
@@ -943,7 +943,7 @@ ol {
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       display: block;
     }
   }
